--- a/Lesson2 - Sass/index.html
+++ b/Lesson2 - Sass/index.html
@@ -5,8 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="assets/sass/style.css">
 </head>
 <body>
-    
+    <h2>Sass</h2>
+
+    <div class="myDiv">
+        <div class="box"></div>
+    </div>
+
+    <h1>My Text</h1>
+
+
+    <button class="btn1">Btn 1</button>
+    <button class="btn2">Btn 2</button>
 </body>
 </html>
