--- a/Lesson4/index.html
+++ b/Lesson4/index.html
@@ -5,8 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="assets/sass/style.css">
 </head>
-<body>
+<body class="lightMode">
+
+    <header>
+        <ul>
+           <li>Home</li>
+           <li>About</li>
+           <li>Blogs</li>
+           <li>Pages</li>
+           <li>Shop</li>
+           <li>Contact</li>
+        </ul>
+        <div class="mode">
+            <button class="toggleBtn" onclick=changeMode()>Mode</button>
+        </div>
+    </header>
+
     
+
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
