--- a/Lesson3/index.html
+++ b/Lesson3/index.html
@@ -7,29 +7,23 @@
     <title>Document</title>
     <link rel="stylesheet" href="assets/sass/style.css">
 </head>
-<body>
+<body class="lightMode">
+
+    <header>
+        <ul>
+           <li>Home</li>
+           <li>About</li>
+           <li>Blogs</li>
+           <li>Pages</li>
+           <li>Shop</li>
+           <li>Contact</li>
+        </ul>
+        <div class="mode">
+            <button class="toggleBtn" onclick=changeMode()>Mode</button>
+        </div>
+    </header>
+
     
-    <form>
-        <input type="text" placeholder="Enter your todo">
-        <input type="submit">
-    </form>
-
-
-    <table>
-        <thead>
-            <tr>
-                <th>To Do </th>
-                <th>Deletes</th>
-            </tr>
-        </thead>
-        <tbody>
-
-        </tbody>
-    </table>
-
-
-
-
 
     <script src="assets/js/script.js"></script>
 </body>
